# StreamDesk

./: .gitignore  Cargo.toml
src/: host_scene.rs  lib.rs  login_scene.rs  main.rs  main_scene.rs  menu_scene.rs  modifiers_state.rs  participant_scene.rs  protocol.rs  secure_channel.rs  watch_scene.rs
