[package]
name = "remote_desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.1"
eframe = "0.31.1"
winapi = "0.3.9"
h264-reader = "0.8"

[patch.crates-io]
egui = { git = "https://github.com/Yoyo383/egui", branch = "master" }
egui-winit = { git = "https://github.com/Yoyo383/egui", branch = "master", package = "egui-winit" }
eframe = { git = "https://github.com/Yoyo383/egui", branch = "master", package = "eframe" }
