[package]
name = "remote_desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.1"
eframe = "0.31.1"
winapi = "0.3.9"
h264-reader = "0.8"
md5 = "0.7.0"
rusqlite = { version = "0.35", features = ["bundled"] }

[patch.crates-io]
egui = { git = "https://github.com/Yoyo383/egui", branch = "master" }
egui-winit = { git = "https://github.com/Yoyo383/egui", branch = "master", package = "egui-winit" }
eframe = { git = "https://github.com/Yoyo383/egui", branch = "master", package = "eframe" }
