[package]
name = "stream-desk"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.1"
eframe = "0.31.1"
egui_extras = { version = "0.31.1", features = ["all_loaders", "svg"] }
winapi = "0.3.9"
h264-reader = "0.8"
md5 = "0.7.0"
rusqlite = { version = "0.35", features = ["bundled"] }
chrono = "0.4.41"
uuid = { version = "1.16", features = ["v4"] }
rsa = "0.9.8"
aes-gcm = "0.10.3"
r2d2_sqlite = "0.28.0"
r2d2 = "0.8.10"
ftail = "0.3.0"
log = "0.4.27"

[patch.crates-io]
egui = { git = "https://github.com/Yoyo383/egui", branch = "master" }
egui-winit = { git = "https://github.com/Yoyo383/egui", branch = "master", package = "egui-winit" }
eframe = { git = "https://github.com/Yoyo383/egui", branch = "master", package = "eframe" }
